force-app/main/default/objects/Lead/fields/Additional_Client_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Client_Comments__c</fullName>
    <description>field to allow for capturing long text area fields information for concatenation. Workflow rule will update this field with the value from &quot;	Additional_Comments__c&quot; so that the data can be used in a concatenation formula. Formula fields do not support Long text area fields.</description>
    <inlineHelpText>Used for Field mapping</inlineHelpText>
    <label>Additional Client Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>