force-app/main/default/objects/Lead/fields/Annual_Revenue_generated_by_Account__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_generated_by_Account__c</fullName>
    <description>If this is an existing Cognizant Customer, what is the annual revenue generated by the account?</description>
    <inlineHelpText>If this is an existing Cognizant Customer, what is the annual revenue generated by the account?</inlineHelpText>
    <label>Annual Revenue generated by Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-5 Million</fullName>
            </value>
            <value>
                <fullName>5-10 Million</fullName>
            </value>
            <value>
                <fullName>10-15 Million</fullName>
            </value>
            <value>
                <fullName>15-20 Million</fullName>
            </value>
            <value>
                <fullName>20-25 Million</fullName>
            </value>
            <value>
                <fullName>25+ Million</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>