force-app/main/default/objects/Lead/fields/ATG_Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>ATG_Practice_Area__c</fullName>
    <description>Potential ATG opportunity lead for business pursuit aligning with one or more ATG practice areas</description>
    <label>ATG Practice Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Enterprise Delivery Management</fullName>
            </value>
            <value>
                <fullName>PMO/Process &amp; Program Mgt</fullName>
            </value>
            <value>
                <fullName>QAP</fullName>
            </value>
            <value>
                <fullName>QTC Management Consulting</fullName>
            </value>
            <value>
                <fullName>QTC - SaaS</fullName>
            </value>
            <value>
                <fullName>SSC</fullName>
            </value>
            <value>
                <fullName>Staff Augmentation</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>