force-app/main/default/objects/Lead/fields/ATG_Prioritized_Revenue_Stream__c.field-meta.xml
<CustomField>
    <fullName>ATG_Prioritized_Revenue_Stream__c</fullName>
    <description>Field to delineate what ATG prioritized revenue stream the project is tied to</description>
    <inlineHelpText>Field to delineate what ATG prioritized revenue stream the project is tied to. If other, please answer the next question.</inlineHelpText>
    <label>ATG Prioritized Revenue Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q2C Advisory</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>Salesforce Billing</fullName>
            </value>
            <value>
                <fullName>Conga CLM</fullName>
            </value>
            <value>
                <fullName>Docusign CLM</fullName>
            </value>
            <value>
                <fullName>Xactly SPM</fullName>
            </value>
            <value>
                <fullName>Vlocity</fullName>
            </value>
            <value>
                <fullName>GoTransverse Billing</fullName>
            </value>
            <value>
                <fullName>Salesforce B2B Commerce</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>