force-app/main/default/objects/Lead/fields/BANT_Details__c.field-meta.xml
<CustomField>
    <fullName>BANT_Details__c</fullName>
    <defaultValue>&quot;1. Budget:&quot; &amp; BR()&amp; BR()&amp;
&quot;2. Authority:&quot; &amp; BR()&amp; BR()&amp;
&quot;3. Need:&quot; &amp; BR()&amp; BR()&amp;
&quot;4. Timeline:&quot; &amp; BR()</defaultValue>
    <description>created to capture notes related to the BANT qualification process of this lead.</description>
    <inlineHelpText>For a lead to be qualified, 2 of the 4 BANT metrics must be identified.</inlineHelpText>
    <label>BANT Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>