force-app/main/default/objects/Lead/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <inlineHelpText>The type of campaign this lead is associated to.</inlineHelpText>
    <label>Campaign Type</label>
    <type>TextArea</type>
</CustomField>