force-app/main/default/objects/Lead/fields/Client_Information_Fields__c.field-meta.xml
<CustomField>
    <fullName>Client_Information_Fields__c</fullName>
    <description>field to capture all values from the client partner information section</description>
    <formula>&quot;Who is the Client: &quot; &amp; Who_is_the_client__c &amp; BR() &amp;
&quot;Does Client Use Salesforce Currently: &quot; &amp; TEXT(Does_Client_Use_Salesforce_currently__c) &amp; BR() &amp;
&quot;How do they use Salesforce today: &quot; &amp; How_Does_Client_use_SF__c &amp; BR() &amp;
&quot;Is this Opportunity Tied to an RFP Resposne: &quot; &amp; TEXT(Tied_to_an_RFP_Response__c) &amp; BR() &amp;
&quot;Client level of Cognizant Relationship: &quot; &amp; TEXT(Client_level_of_Cognizant_Relationship__c) &amp; BR() &amp;
&quot;ATG Prioritized Revenue Stream: &quot; &amp; TEXT(ATG_Prioritized_Revenue_Stream__c) &amp; BR() &amp;
&quot;If other, what is offering tied to project: &quot; &amp; Other_Offering_Form_tied_to_Project__c &amp; BR() &amp;
&quot;Existing Cognizant Customer: &quot; &amp; TEXT(Existing_Cognizant_Customer__c) &amp; BR() &amp;
&quot;Expected Growth of Account this year: &quot; &amp; TEXT(Expected_Growth_within_Account_this_year__c) &amp; BR() &amp;
&quot;Annual Revenue Generated by Account: &quot; &amp; TEXT(Annual_Revenue_generated_by_Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for field mapping</inlineHelpText>
    <label>Client Information Fields</label>
    <type>Text</type>
</CustomField>