force-app/main/default/objects/Lead/fields/Client_level_of_Cognizant_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Client_level_of_Cognizant_Relationship__c</fullName>
    <description>Field to understand at what level within the client does Cognizant’s relationship live?</description>
    <inlineHelpText>Field to understand at what level within the client does Cognizant’s relationship live?</inlineHelpText>
    <label>Client level of Cognizant Relationship?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO / Senior Finance Executive</fullName>
            </value>
            <value>
                <fullName>Chairman or President</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>CISO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CTO / Senior Tech Executive</fullName>
            </value>
            <value>
                <fullName>EVP / SVP</fullName>
            </value>
            <value>
                <fullName>Director of IT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>