force-app/main/default/objects/Lead/fields/Client_Partner_Info_fields__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_Info_fields__c</fullName>
    <formula>&quot;Name: &quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName &amp; BR() &amp;
&quot;Vertical Market: &quot; &amp; TEXT(Vertical_Market__c) &amp; BR() &amp;
&quot;Email: &quot; &amp; Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Partner Info Fields</label>
    <type>Text</type>
</CustomField>