force-app/main/default/objects/Lead/fields/Client_Partner_Information_Map__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_Information_Map__c</fullName>
    <label>Client Partner Information Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>