force-app/main/default/objects/Lead/fields/Cognizant_Bidding_on_Non_ATG_Work__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_Bidding_on_Non_ATG_Work__c</fullName>
    <description>field to allow for capturing long text area fields information for concatenation. Workflow rule will update this field with the value from &quot;Is_Cognizant_bidding_on_all_non_ATG_work__c	&quot; so that the data can be used in a concatenation formula. Formula fields do not support Long text area fields.</description>
    <inlineHelpText>Used for Field Mapping</inlineHelpText>
    <label>Cognizant Bidding on Non-ATG Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>