force-app/main/default/objects/Lead/fields/Cognizants_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Cognizants_Competitors__c</fullName>
    <description>field to allow for capturing long text area fields information for concatenation. Workflow rule will update this field with the value from &quot;	Who_are_Cognizant_s_Competitors__c&quot; so that the data can be used in a concatenation formula. Formula fields do not support Long text area fields.</description>
    <inlineHelpText>Used for Field Mapping</inlineHelpText>
    <label>Cognizants Competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>