force-app/main/default/objects/Lead/fields/Customer_Contact_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Level__c</fullName>
    <description>The level within this leads company the primary POC holds</description>
    <inlineHelpText>The level of which this lead operates within his or her company.</inlineHelpText>
    <label>Customer Contact Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Business Unit Head / GM</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO / Senior Finance Executive</fullName>
            </value>
            <value>
                <fullName>Chairman or President</fullName>
            </value>
            <value>
                <fullName>Chief Officer</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>CISO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CTO / Senior Tech Executive</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>EVP / SVP</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Proj Manager/Program Manager</fullName>
            </value>
            <value>
                <fullName>Vice-President</fullName>
            </value>
            <value>
                <fullName>VMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>