force-app/main/default/objects/Lead/fields/Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name__c</fullName>
    <inlineHelpText>The title the individual as part of this lead holds within their company</inlineHelpText>
    <label>Customer Contact Job Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>