force-app/main/default/objects/Lead/fields/Deal_Pursuit_Information__c.field-meta.xml
<CustomField>
    <fullName>Deal_Pursuit_Information__c</fullName>
    <description>used to capture all fields from the deal pursuit information field into one field</description>
    <formula>&quot;Who are Cognizant&apos;s Competitors: &quot; &amp; Cognizants_Competitors__c &amp; BR() &amp;
&quot;Are we partnered with the vendor: &quot; &amp; TEXT(Partnered_with_Vendor__c) &amp; BR() &amp;
&quot;Are we deploying a whole team: &quot; &amp; TEXT(Deploying_a_whole_team__c) &amp; BR() &amp;
&quot;What is the expected Delivery Model (Onshore/Offshore): &quot; &amp; TEXT(Delivery_Model_Onshore_Offshore__c) &amp; BR() &amp;
&quot;Will the client expect a mixture of resources (senior, mid, junior): &quot; &amp; TEXT(Mixture_of_Resources_Accepted__c) &amp; BR() &amp;
&quot;What are the blended rate expectations: &quot; &amp; What_are_the_Blended_rate_expectations__c &amp; BR() &amp;
&quot;Blended Rate of $185 Onshore and $110 nearshore acceptable: &quot; &amp; TEXT(X185_onshore_and_110_offshore_accepted__c) &amp; BR() &amp;
&quot;Expected lead time for start of project: &quot; &amp; Expected_Lead_time_for_Start_of_Project__c &amp; BR() &amp;
&quot;Is Cognizant bidding on all non-ATG work?: &quot; &amp; Cognizant_Bidding_on_Non_ATG_Work__c &amp; BR() &amp;
&quot;Additional Comments: &quot; &amp; Additional_Client_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>used for lead field mapping</inlineHelpText>
    <label>Deal Pursuit Information</label>
    <type>Text</type>
</CustomField>