force-app/main/default/objects/Lead/fields/Deal_Pursuit_Information_Map__c.field-meta.xml
<CustomField>
    <fullName>Deal_Pursuit_Information_Map__c</fullName>
    <label>Deal Pursuit Information Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>