force-app/main/default/objects/Lead/fields/Delivery_Model_Onshore_Offshore__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Model_Onshore_Offshore__c</fullName>
    <description>What is the expected delivery model of the opportunity (Onshore/Offshore)?</description>
    <inlineHelpText>What is the expected delivery model of the opportunity (Onshore/Offshore)?</inlineHelpText>
    <label>Delivery Model (Onshore/Offshore)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100/0</fullName>
            </value>
            <value>
                <fullName>80/20</fullName>
            </value>
            <value>
                <fullName>50/50</fullName>
            </value>
            <value>
                <fullName>20/80</fullName>
            </value>
            <value>
                <fullName>0/100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>