force-app/main/default/objects/Lead/fields/Does_Client_Use_Salesforce_currently__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_Use_Salesforce_currently__c</fullName>
    <inlineHelpText>Picklist to see if Cognizant source client currently utilizes Salesforce in any way</inlineHelpText>
    <label>Does Client Use Salesforce currently?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>