force-app/main/default/objects/Lead/fields/Existing_Cognizant_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Cognizant_Customer__c</fullName>
    <description>Field to capture if a lead is a cognizant-sourced lead is an existing cognizant customer</description>
    <inlineHelpText>Field to capture if a lead is a cognizant-sourced lead is an existing cognizant customer</inlineHelpText>
    <label>Existing Cognizant Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>