force-app/main/default/objects/Lead/fields/Expected_Growth_within_Account_this_year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Growth_within_Account_this_year__c</fullName>
    <description>If this is an existing Cognizant Customer, what is the expected growth within the account this year?</description>
    <inlineHelpText>If this is an existing Cognizant Customer, what is the expected growth within the account this year?</inlineHelpText>
    <label>Expected Growth within Account this year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-5 Million</fullName>
            </value>
            <value>
                <fullName>5-10 Million</fullName>
            </value>
            <value>
                <fullName>10-15 Million</fullName>
            </value>
            <value>
                <fullName>15-20 Million</fullName>
            </value>
            <value>
                <fullName>20-25 Million</fullName>
            </value>
            <value>
                <fullName>25+ Million</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>