force-app/main/default/objects/Lead/fields/Expected_Lead_time_for_Start_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Expected_Lead_time_for_Start_of_Project__c</fullName>
    <description>What is the expected lead time for the start of the project?</description>
    <inlineHelpText>What is the expected lead time for the start of the project?</inlineHelpText>
    <label>Expected Lead time for Start of Project?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>