force-app/main/default/objects/Lead/fields/File_Upload__c.field-meta.xml
<CustomField>
    <fullName>File_Upload__c</fullName>
    <label>File Upload</label>
    <type>Url</type>
</CustomField>