force-app/main/default/objects/Lead/fields/fliptop__Email_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>fliptop__Email_Last_Updated__c</fullName>
    <description>Used internally by Fliptop to determine record eligibility for fliptop updates</description>
    <label>Email Last Updated</label>
    <type>DateTime</type>
</CustomField>