force-app/main/default/objects/Lead/fields/fliptop__Email_Updated_Since_Last_Fliptop_Run__c.field-meta.xml
<CustomField>
    <fullName>fliptop__Email_Updated_Since_Last_Fliptop_Run__c</fullName>
    <description>Used internally by Fliptop to determine record eligibility for fliptop updates</description>
    <formula>if( fliptop__Email_Last_Updated__c &gt;  fliptop__Fliptop_Last_Checked__c, &apos;yes&apos;,&apos;no&apos;)</formula>
    <label>Email Updated Since Last Fliptop Run</label>
    <type>Text</type>
</CustomField>