force-app/main/default/objects/Lead/fields/fliptop__Facebook__c.field-meta.xml
<CustomField>
    <fullName>fliptop__Facebook__c</fullName>
    <description>Read-only Facebook URL with Icon</description>
    <formula>IF(ISBLANK(fliptop__Facebook_URL__c),
	&quot;&quot;,
	HYPERLINK(fliptop__Facebook_URL__c, IMAGE(&quot;/resource/fliptop__Fliptop_Images/facebook.png&quot;, &quot;facebook logo&quot;), &quot;_blank&quot;) + &quot; &quot; +
	HYPERLINK(fliptop__Facebook_URL__c,
		IF(CONTAINS(fliptop__Facebook_URL__c,&quot;?id=&quot;),
			RIGHT(fliptop__Facebook_URL__c,
				LEN(fliptop__Facebook_URL__c) - (FIND(&quot;?id=&quot;,fliptop__Facebook_URL__c) + 3)),
			RIGHT(fliptop__Facebook_URL__c,
				LEN(fliptop__Facebook_URL__c) - (FIND(&quot;.com/&quot;,fliptop__Facebook_URL__c) + 4))
)
)
)</formula>
    <label>Facebook</label>
    <type>Text</type>
</CustomField>