force-app/main/default/objects/Lead/fields/fliptop__Fliptop_Age__c.field-meta.xml
<CustomField>
    <fullName>fliptop__Fliptop_Age__c</fullName>
    <label>Fliptop Age</label>
    <length>10</length>
    <type>Text</type>
</CustomField>