force-app/main/default/objects/Lead/fields/fliptop__Fliptop_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>fliptop__Fliptop_Image_URL__c</fullName>
    <label>Fliptop Image URL</label>
    <type>Url</type>
</CustomField>