force-app/main/default/objects/Lead/fields/fliptop__Fliptop_Last_Status__c.field-meta.xml
<CustomField>
    <fullName>fliptop__Fliptop_Last_Status__c</fullName>
    <label>Fliptop Last Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>