force-app/main/default/objects/Lead/fields/fliptop__Fliptop_Location__c.field-meta.xml
<CustomField>
    <fullName>fliptop__Fliptop_Location__c</fullName>
    <label>Fliptop Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>