force-app/main/default/objects/Lead/fields/fliptop__Fliptop_Processed__c.field-meta.xml
<CustomField>
    <fullName>fliptop__Fliptop_Processed__c</fullName>
    <description>Has this record successfully been processed by Fliptop.</description>
    <formula>if( fliptop__Fliptop_Last_Status__c = &apos;Contact Found&apos; ||  fliptop__Fliptop_Last_Status__c = &apos;Contact Not Found&apos;,
&apos;Completed&apos;,
&apos;Pending&apos;
)</formula>
    <label>Fliptop Processed</label>
    <type>Text</type>
</CustomField>