force-app/main/default/objects/Lead/fields/fliptop__Has_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>fliptop__Has_LinkedIn__c</fullName>
    <description>For reporting purposes</description>
    <formula>IF( ISBLANK( fliptop__LinkedIn_URL__c ) ,&quot;No&quot;,&quot;Yes&quot;)</formula>
    <label>Has LinkedIn</label>
    <type>Text</type>
</CustomField>