force-app/main/default/objects/Lead/fields/fliptop__LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>fliptop__LinkedIn__c</fullName>
    <description>Read-only LinkedIn URL with Icon</description>
    <formula>IF(ISBLANK(fliptop__LinkedIn_URL__c), 
&quot;&quot;, 
HYPERLINK(fliptop__LinkedIn_URL__c, IMAGE(&quot;/resource/fliptop__Fliptop_Images/linkedin.png&quot;, &quot;linkedin logo&quot;), &quot;_blank&quot;) + &quot; &quot; +
HYPERLINK(fliptop__LinkedIn_URL__c,
		IF(CONTAINS(fliptop__LinkedIn_URL__c,&quot;.com/in/&quot;),
			RIGHT(fliptop__LinkedIn_URL__c,
				LEN(fliptop__LinkedIn_URL__c) - (FIND(&quot;.com/in/&quot;,fliptop__LinkedIn_URL__c) + 7)),
			LEFT(RIGHT(fliptop__LinkedIn_URL__c,
				LEN(fliptop__LinkedIn_URL__c) - (FIND(&quot;.com/pub/&quot;,fliptop__LinkedIn_URL__c) + 8)),FIND(&quot;/&quot;,RIGHT(fliptop__LinkedIn_URL__c,
				LEN(fliptop__LinkedIn_URL__c) - (FIND(&quot;.com/pub/&quot;,fliptop__LinkedIn_URL__c) + 8))) - 1)
)
)
)</formula>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>