force-app/main/default/objects/Lead/fields/fliptop__LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>fliptop__LinkedIn_URL__c</fullName>
    <description>Raw LinkedIn URL</description>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>