force-app/main/default/objects/Lead/fields/How_Does_Client_use_SF__c.field-meta.xml
<CustomField>
    <fullName>How_Does_Client_use_SF__c</fullName>
    <description>field to allow for capturing long text area fields information for concatenation. Workflow rule will update this field with the value from &quot;	If_so_how_do_they_use_Salesforce_today__&quot; so that the data can be used in a concatenation formula. Formula fields do not support Long text area fields.</description>
    <inlineHelpText>Used for Lead mapping</inlineHelpText>
    <label>How Does Client use SF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>