force-app/main/default/objects/Lead/fields/If_so_how_do_they_use_Salesforce_today__c.field-meta.xml
<CustomField>
    <fullName>If_so_how_do_they_use_Salesforce_today__c</fullName>
    <inlineHelpText>Field to capture specifics of how client currently utilizes Salesforce</inlineHelpText>
    <label>If so, how do they use Salesforce today?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>