force-app/main/default/objects/Lead/fields/Is_Cognizant_bidding_on_all_non_ATG_work__c.field-meta.xml
<CustomField>
    <fullName>Is_Cognizant_bidding_on_all_non_ATG_work__c</fullName>
    <description>If there are multiple work streams within this opportunity, is Cognizant bidding on all of the work outside of just what ATG would be assisting with?</description>
    <inlineHelpText>If there are multiple work streams within this opportunity, is Cognizant bidding on all of the work outside of just what ATG would be assisting with?</inlineHelpText>
    <label>Is Cognizant bidding on all non-ATG work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>