force-app/main/default/objects/Lead/fields/Lead_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Link__c</fullName>
    <formula>&quot;Name: &quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName &amp; BR() &amp;
&quot;Vertical Market: &quot; &amp; TEXT(Vertical_Market__c) &amp; BR() &amp;
&quot;Email: &quot; &amp; Email &amp; BR() &amp;
&quot;Who is the Client: &quot; &amp; Who_is_the_client__c &amp; BR() &amp;
&quot;Does Client Use Salesforce Currently: &quot; &amp; TEXT(Does_Client_Use_Salesforce_currently__c) &amp; BR() &amp;
&quot;How do they use Salesforce today: &quot; &amp; How_Does_Client_use_SF__c &amp; BR() &amp;
&quot;Is this Opportunity Tied to an RFP Resposne: &quot; &amp; TEXT(Tied_to_an_RFP_Response__c) &amp; BR() &amp;
&quot;Client level of Cognizant Relationship: &quot; &amp; TEXT(Client_level_of_Cognizant_Relationship__c) &amp; BR() &amp;
&quot;ATG Prioritized Revenue Stream: &quot; &amp; TEXT(ATG_Prioritized_Revenue_Stream__c) &amp; BR() &amp;
&quot;If other, what is offering tied to project: &quot; &amp; Other_Offering_Form_tied_to_Project__c &amp; BR() &amp;
&quot;Existing Cognizant Customer: &quot; &amp; TEXT(Existing_Cognizant_Customer__c) &amp; BR() &amp;
&quot;Expected Growth of Account this year: &quot; &amp; TEXT(Expected_Growth_within_Account_this_year__c) &amp; BR() &amp;
&quot;Annual Revenue Generated by Account: &quot; &amp; TEXT(Annual_Revenue_generated_by_Account__c) &amp; BR() &amp;
&quot;Who are Cognizant&apos;s Competitors: &quot; &amp; Cognizants_Competitors__c &amp; BR() &amp;
&quot;Are we partnered with the vendor: &quot; &amp; TEXT(Partnered_with_Vendor__c) &amp; BR() &amp;
&quot;Are we deploying a whole team: &quot; &amp; TEXT(Deploying_a_whole_team__c) &amp; BR() &amp;
&quot;What is the expected Delivery Model (Onshore/Offshore): &quot; &amp; TEXT(Delivery_Model_Onshore_Offshore__c) &amp; BR() &amp;
&quot;Will the client expect a mixture of resources (senior, mid, junior): &quot; &amp; TEXT(Mixture_of_Resources_Accepted__c) &amp; BR() &amp;
&quot;What are the blended rate expectations: &quot; &amp; What_are_the_Blended_rate_expectations__c &amp; BR() &amp;
&quot;Blended Rate of $185 Onshore and $110 nearshore acceptable: &quot; &amp; TEXT(X185_onshore_and_110_offshore_accepted__c) &amp; BR() &amp;
&quot;Expected lead time for start of project: &quot; &amp; Expected_Lead_time_for_Start_of_Project__c &amp; BR() &amp;
&quot;Is Cognizant bidding on all non-ATG work?: &quot; &amp; Cognizant_Bidding_on_Non_ATG_Work__c &amp; BR() &amp;
&quot;Additional Comments: &quot; &amp; Additional_Client_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Record Link</label>
    <type>Text</type>
</CustomField>