force-app/main/default/objects/Lead/fields/Lead_segement__c.field-meta.xml
<CustomField>
    <fullName>Lead_segement__c</fullName>
    <description>Lead from website  (Demo field from Rodney)</description>
    <label>Lead segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospective client</fullName>
            </value>
            <value>
                <fullName>Prospective employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>