force-app/main/default/objects/Lead/fields/Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Details__c</fullName>
    <inlineHelpText>Details about lead source (e.g. Conference name/date)</inlineHelpText>
    <label>Lead Source Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>