force-app/main/default/objects/Lead/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <description>0-45 employees = SMB, 45-200 employees = Growth (GRB), 200-1000 employees = MidMarket, 1000-4500 employees = General (GBU),</description>
    <inlineHelpText>Auto-Generated from # of Employees field</inlineHelpText>
    <label>Market Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>GBU</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>GRB</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>