force-app/main/default/objects/Lead/fields/Mixture_of_Resources_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Mixture_of_Resources_Accepted__c</fullName>
    <description>Will the client accept a mixture of senior, mid, and junior resources on the project?</description>
    <inlineHelpText>Will the client accept a mixture of senior, mid, and junior resources on the project?</inlineHelpText>
    <label>Mixture of Resources Accepted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>